<resources>
    <string name="app_name">PhotoStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capture_photo">Capturar foto</string>
    <string name="download_images">Imagens</string>
    <string name="current_date">Data:</string>
    <string name="type_your_name">Digite seu nome</string>
    <string name="name">Nome</string>
    <string name="age">Idade</string>
    <string name="take_picture">Registrar foto</string>
    <string name="photo_saved_in_downloads">Foto capturada e salva na pasta Downloads</string>
    <string name="error_saving_photo">Erro ao salver foto</string>
    <string name="app_logo" />
    <string name="close" />
    <string name="take_photo">Tirar foto</string>
</resources>